@@ -865,8 +865,12 @@ Linseg_generate(Linseg *self) {
                         self->currentValue = self->targets[self->which-1];
                     }    
                 }    
-                else
-                    self->increment = (self->targets[self->which] - self->targets[self->which-1]) / ((self->times[self->which] - self->times[self->which-1]) / self->sampleToSec);
+                else {
+                    if ((self->times[self->which] - self->times[self->which-1]) <= 0)
+                        self->increment = self->targets[self->which] - self->currentValue;
+                    else
+                        self->increment = (self->targets[self->which] - self->targets[self->which-1]) / ((self->times[self->which] - self->times[self->which-1]) / self->sampleToSec);
+                }
             }
             if (self->currentTime <= self->times[self->listsize-1])
                 self->currentValue += self->increment;            
@@ -1267,12 +1271,15 @@ Expseg_generate(Expseg *self) {
                 else {
                     self->range = self->targets[self->which] - self->targets[self->which-1];
                     self->steps = (self->times[self->which] - self->times[self->which-1]) * self->sr;
-                    self->inc = 1.0 / self->steps;
+                    if (self->steps <= 0)
+                        self->inc = 1.0;
+                    else
+                        self->inc = 1.0 / self->steps;
                 }    
                 self->pointer = 0.0;   
             }
             if (self->currentTime <= self->times[self->listsize-1]) {
-                if (self->pointer > 1.0)
+                if (self->pointer >= 1.0)
                     self->pointer = 1.0;
                 if (self->inverse == 1 && self->range < 0.0)
                     scl = 1.0 - pow(1.0 - self->pointer, self->exp);
